# fastmcp_demo

./: .gitignore  Dockerfile  README.md  build.sh  chat_server.py  docker-compose.yml  docker-set-proxy.sh  env.example  install.sh  mcp_server.py  pyproject.toml  requirements.txt  server.py  start_servers.sh  tools.py
