[project]
name = "fastmcp-demo"
version = "0.1.0"
description = "FastMCP Demo Application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "fastmcp>=0.1.0",
    "mcp>=0.1.0",
    "llama-cpp-python>=0.2.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "llama-index>=0.10.0",
    "llama-index-llms-llama-cpp>=0.1.0",
    "llama-index-tools-mcp>=0.1.0",
]

[tool.uv]
# 不使用 dev-dependencies，已废弃

